libs/extractor/src/snapshots/extractor__tests__extract_static_css_class_name_props-8.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.tsx\",\nr#\"import { css } from \"@devup-ui/core\";\n<Box className={css({})}/>;\n\"#,\nExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None }).unwrap()"
---
ExtractOutput {
    styles: [],
    code: "<Box className={\"\"} />;\n",
}
