libs/extractor/src/snapshots/extractor__tests__extract_static_css_with_media_query.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { css } from \"@devup-ui/core\";\n<Box className={css`\n  @media (min-width: 768px) {\n    & {\n      background-color: red;\n    }\n  }\n`}/>;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "red",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(min-width:768px)",
                        selector: None,
                        outer: [],
                        file: None,
                    },
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<Box className={\"OHczvzafwch4ia1mw7\"} />;\n",
}
